--- a/trunk/gui/usuarios/recuperarpassword.ui
+++ b/trunk/gui/usuarios/recuperarpassword.ui
@@ -6,36 +6,36 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>382</width>
-    <height>215</height>
+    <width>380</width>
+    <height>265</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
-    <width>0</width>
-    <height>0</height>
+    <width>380</width>
+    <height>265</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
-    <width>413</width>
-    <height>215</height>
+    <width>380</width>
+    <height>265</height>
    </size>
   </property>
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <widget class="QPushButton" name="pushButtonEnviar">
+  <widget class="QPushButton" name="pushButtonRecuperar">
    <property name="geometry">
     <rect>
-     <x>150</x>
-     <y>150</y>
+     <x>140</x>
+     <y>220</y>
      <width>98</width>
      <height>27</height>
     </rect>
    </property>
    <property name="text">
-    <string>Enviar</string>
+    <string>Recuperar</string>
    </property>
   </widget>
   <widget class="QLabel" name="label">
@@ -86,9 +86,9 @@
   <widget class="QLabel" name="label_2">
    <property name="geometry">
     <rect>
-     <x>20</x>
+     <x>100</x>
      <y>0</y>
-     <width>351</width>
+     <width>211</width>
      <height>41</height>
     </rect>
    </property>
@@ -101,7 +101,56 @@
     </font>
    </property>
    <property name="text">
-    <string>Se enviará un correo con su contraseña</string>
+    <string>Recuperar Contraseña</string>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEditFrase">
+   <property name="geometry">
+    <rect>
+     <x>150</x>
+     <y>130</y>
+     <width>211</width>
+     <height>27</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_3">
+   <property name="geometry">
+    <rect>
+     <x>40</x>
+     <y>130</y>
+     <width>101</width>
+     <height>17</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Frase Secreta:</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_4">
+   <property name="geometry">
+    <rect>
+     <x>60</x>
+     <y>180</y>
+     <width>81</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Contraseña:</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="labelPass">
+   <property name="geometry">
+    <rect>
+     <x>150</x>
+     <y>180</y>
+     <width>211</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
    </property>
   </widget>
  </widget>
